--- a/.github/workflows/new-pr.yml
+++ b/.github/workflows/new-pr.yml
@@ -51,7 +51,7 @@ jobs:
         PW: ${{ secrets.USER_CRED }}
       run: |
         PR="${{ github.event.pull_request.body }}"
-        echo $PR | grep -oP '\(backport #\K\d+' | tail -n 1)
+        echo $PR | grep -oP '\(backport #\K\d+' | tail -n 1
         author=$(gh pr view ${ORI_PR} -R ${REPO} --json author -q '.author.login')
         if [[ ! "${author}" =~ "mergify" ]]; then
           gh pr edit ${PR_NUMBER} -R ${REPO} --add-assignee ${author} || true
